--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Jaume Cloquell | Soft Engineer</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -26,14 +26,14 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Jaume!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+		<div class="tagline"> Soft. Engineer developer | Linux</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://github.com/jaumeCloquellCapo"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/decanceba"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>
+			<!--a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a-->
+			<a target="_blank" href="https://www.linkedin.com/in/🤖-jaume-cloquell-119765b7"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
