--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 		<div class="tagline"> Soft. Engineer developer | Linux</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
+			<a target="_blank" href="https://www.notion.so/Jaume-Cloquell-Personal-Blog-873f713a95af4bafa0252c6ce7587d62"><i class="fab fa-blog"></i></a>
 			<a target="_blank" href="https://github.com/jaumeCloquellCapo"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/decanceba"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
+			<!--a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a-->
 			<!--a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a-->
 			<a target="_blank" href="https://www.linkedin.com/in/🤖-jaume-cloquell-119765b7"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
+			<!--a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
+			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a-->
     </div>
 	</main>
 </body>
