--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="tagline"> Soft. Engineer developer | Linux</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://www.notion.so/Jaume-Cloquell-Personal-Blog-873f713a95af4bafa0252c6ce7587d62"><i class="fab fa-blog"></i></a>
+			<a target="_blank" href="https://www.notion.so/Jaume-Cloquell-Personal-Blog-873f713a95af4bafa0252c6ce7587d62"><i class="fab fa-microblog"></i></a>
 			<a target="_blank" href="https://github.com/jaumeCloquellCapo"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/decanceba"><i class="fab fa-twitter"></i></a>
 			<!--a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a-->
