--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<!--a target="_blank" href="https://twitter.com/decanceba"><i class="fab fa-twitter"></i></a-->
 			<!--a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a-->
 			<!--a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a-->
-			<a target="_blank" href="https://www.linkedin.com/in/🤖-jaume-cloquell-119765b7"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/jaume-cloquell/"><i class="fab fa-linkedin"></i></a>
 			<!--a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
